--- a/front/src/lib/styles/components/posts-grid.css
+++ b/front/src/lib/styles/components/posts-grid.css
@@ -20,6 +20,7 @@
     position: relative;
     grid-column: span 6;
     z-index: 1;
+    filter: var(--posts-item-filter);
     transition-duration: var(--transition-duration);
     transition-property: filter;
     transition-timing-function: ease-out;
@@ -35,6 +36,12 @@
     min-height: 7rem;
     list-style-type: none;
     text-align: center;
+    &:hover,
+    &:focus,
+    &:focus-visible,
+    &:active {
+      filter: var(--posts-item-hover-filter);
+    }
     @media screen and (min-width: 480px) {
       box-shadow: var(--shadow-elevation-medium);
     }
@@ -43,14 +50,19 @@
       flex-direction: column;
       justify-content: center;
       backdrop-filter: blur(0.5rem);
+      filter: var(--posts-item-link-filter);
+      transition-duration: var(--transition-duration);
       transition-duration: var(--transition-duration);
       transition-property: background-color, color, text-shadow, border-color,
         box-shadow;
       transition-timing-function: var(--transition-timing-function);
+      transition-timing-function: var(--transition-timing-function);
       will-change: background-color;
       box-sizing: border-box;
+      box-shadow: var(--posts-item-link-box-shadow);
       border: unset;
       border-radius: 0.75rem;
+      background-color: var(--posts-item-link-bg-clr);
       padding: 1.5rem 2.25rem;
       width: 100%;
       height: 100%;
@@ -66,6 +78,7 @@
       }
       &::before {
         position: absolute;
+        opacity: 0.5;
         z-index: 6;
         mask:
           linear-gradient(3deg, #fff 0 0) content-box,
@@ -73,8 +86,21 @@
         mask-composite: exclude;
         inset: 0;
         border-radius: 0.75rem;
+        background: var(--rim-light-mask-bg);
         padding: 1px 1px 0 0;
         content: '';
+      }
+      &:hover,
+      &:focus,
+      &:focus,
+      &:focus-visible,
+      &:active {
+        box-shadow: var(--posts-item-link-hover-box-shadow);
+        background-color: rgba(0, 0, 0, 0);
+        .link-bg {
+          transition-delay: 133ms;
+          background-color: rgba(var(--clr-neut-900-rgb), 0.6);
+        }
       }
       .link-bg {
         align-self: center;
@@ -83,9 +109,11 @@
         transition-property: background-color, color;
         transition-timing-function: ease-out;
         border-radius: 0.5rem;
+        background-color: rgba(var(--clr-neut-900-rgb), 0);
         background-color: transparent;
         padding: 0.75rem 2rem;
         width: auto;
+        color: white;
         text-wrap: balance;
       }
     }
