--- a/front/src/lib/styles/global.css
+++ b/front/src/lib/styles/global.css
@@ -21,6 +21,9 @@
 :root {
   --white: 223, 224, 224;
   --black: 19, 19, 20;
+  background: var(--bg-gradient);
+  background-repeat: no-repeat;
+  background-color: var(--bg-clr);
   :focus-visible {
     outline-offset: 0.25rem;
     border-bottom: 0 !important;
@@ -67,11 +70,15 @@ body {
   min-height: 100vh;
   overflow: overlay;
   scroll-behavior: smooth;
+  scrollbar-color: var(--fg-clr-oooo) transparent;
   scrollbar-gutter: stable;
   color: var(--fg-clr);
   font-size: 1rem;
   line-height: 1.5rem;
   font-family: var(--font-psxl);
+  &::-webkit-scrollbar-thumb {
+    background-color: var(--fg-clr-oooo);
+  }
   @media screen and (min-width: 640px) {
     font-size: 1.125rem;
     line-height: 1.75rem;
@@ -99,6 +106,7 @@ body {
   z-index: 1;
   transition: background-color;
   @apply dg--transition-effect;
+  background-color: var(--fg-clr);
 }
 
 #main {
