--- a/front/src/lib/styles/pages/post.css
+++ b/front/src/lib/styles/pages/post.css
@@ -45,6 +45,7 @@
     margin-right: 1rem;
     margin-left: 1rem;
     border-radius: 0.75rem;
+    background-color: var(--rim-light-bg);
     height: 277px;
     @media screen and (min-width: 640px) {
       height: 400px;
@@ -65,6 +66,7 @@
       mask-composite: exclude;
       inset: 0;
       border-radius: 0.75rem;
+      background: var(--rim-light-mask-bg);
       padding: 1px 1px 0 0;
       content: '';
     }
@@ -72,6 +74,7 @@
       position: absolute;
       opacity: 1;
       z-index: 4;
+      filter: var(--post-hero-filter);
       transition: opacity, filter;
       transition-duration: 1s;
       transition-timing-function: var(--transform-timing-function);
@@ -118,6 +121,7 @@
       }
     }
   }
+
   .post-article,
   .aside,
   .aside-toggle {
@@ -127,6 +131,7 @@
       top: -4rem;
     }
   }
+
   h1.post-title,
   .post-article {
     @media screen and (min-width: 480px) {
@@ -136,6 +141,7 @@
       top: -5rem;
     }
   }
+
   h1.post-title {
     left: -1px;
     z-index: 5;
@@ -147,13 +153,17 @@
       padding: 0 1.5rem;
     }
   }
+
   .pubdate {
+    color: var(--fg-clr-oo);
     font-size: 1rem;
   }
+
   .aside-toggle {
     display: inline;
     float: right;
   }
+
   .aside {
     display: none;
     opacity: 0.85;
@@ -180,10 +190,12 @@
       }
     }
   }
+
   .page-navigation {
     .page-navigation-category-all {
       display: none;
     }
+
     &.mini {
       .page-navigation-toggle {
         box-shadow: none;
@@ -192,6 +204,7 @@
     }
   }
 }
+
 @supports (initial-letter: 2) {
   .post .summary p::first-letter {
     @apply dg--font-lbb;
@@ -202,6 +215,7 @@
     font-weight: bold;
   }
 }
+
 @supports not (initial-letter: 2) {
   .post .summary p::first-letter {
     @apply dg--font-lbb;
@@ -263,6 +277,12 @@
         color var(--transition-duration-md);
       border: none;
       font-size: 1rem;
+      &:hover,
+      &:focus,
+      &:focus-visible,
+      &:active {
+        color: var(--highlight-clr);
+      }
       @media screen and (min-width: 480px) {
         left: -1rem;
       }
@@ -309,6 +329,9 @@
         font-weight: 700;
         font-family: var(--font-lbb);
       }
+      &::first-letter {
+        color: var(--highlight-clr);
+      }
     }
   }
   p {
@@ -344,12 +367,19 @@
       }
     }
   }
+  code {
+    color: var(--fg-clr-oo);
+  }
   blockquote {
     position: relative;
     margin: 3rem auto;
+    box-shadow: var(--shadow-elevation-medium);
+    border-left: 0.5rem solid var(--hardlight-clr);
     border-radius: 0.5rem;
+    background: var(--bg-light-clr);
     padding: 0.5rem 1.5rem;
     overflow: visible;
+    color: var(--fg-clr-oo);
     font-style: italic;
     font-family: var(--font-lb);
     @media screen and (min-width: 480px) {
@@ -358,6 +388,7 @@
     p:first-child::before,
     &::after {
       position: absolute;
+      color: var(--highlight-clr);
       font-size: 4rem;
       @screen md {
         font-size: 5rem;
@@ -376,6 +407,7 @@
       mask-composite: exclude;
       box-sizing: border-box;
       border-radius: 0.5rem;
+      background: var(--rim-light-mask-bg);
       padding: 1px 1px 0 0;
       content: '';
     }
