--- a/front/src/lib/styles/global.css
+++ b/front/src/lib/styles/global.css
@@ -21,35 +21,20 @@
 :root {
   --white: 223, 224, 224;
   --black: 19, 19, 20;
+  background: var(--bg-gradient);
+  background-repeat: no-repeat;
+  background-color: var(--bg-clr);
   :focus-visible {
+    outline: 2px dashed var(--highlight-clr);
     outline-offset: 0.25rem;
     border-bottom: 0 !important;
-  }
-}
-
-html.light-theme {
-  @apply dg--light-theme;
-}
-
-html.dark-theme {
-  @apply dg--dark-theme;
-}
-
-@media (prefers-color-scheme: light) {
-  :root {
-    @apply dg--light-theme;
-  }
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    @apply dg--dark-theme;
   }
 }
 
 html {
   transition: background-color;
   transition-duration: var(--transition-duration-md);
+  background-color: var(--bg-clr);
   min-height: 100%;
   overflow: clip;
   scroll-behavior: smooth;
@@ -67,11 +52,15 @@ body {
   min-height: 100vh;
   overflow: overlay;
   scroll-behavior: smooth;
+  scrollbar-color: var(--fg-clr-oooo) transparent;
   scrollbar-gutter: stable;
   color: var(--fg-clr);
   font-size: 1rem;
   line-height: 1.5rem;
   font-family: var(--font-psxl);
+  &::-webkit-scrollbar-thumb {
+    background-color: var(--fg-clr-oooo);
+  }
   @media screen and (min-width: 640px) {
     font-size: 1.125rem;
     line-height: 1.75rem;
@@ -99,6 +88,7 @@ body {
   z-index: 1;
   transition: background-color;
   @apply dg--transition-effect;
+  background-color: var(--fg-clr);
 }
 
 #main {
@@ -123,6 +113,19 @@ body {
   }
 }
 
+.bio,
+.footer {
+  a {
+    border-bottom-color: var(--link-clr);
+    color: var(--link-clr);
+    &:hover,
+    &:focus {
+      border-bottom-color: var(--highlight-clr);
+      color: var(--fg-clr);
+    }
+  }
+}
+
 .scroll-top {
   display: flex;
   flex-direction: column;
@@ -142,5 +145,47 @@ body {
   svg {
     margin-top: 1.25rem;
     margin-bottom: 0.3rem;
+  }
+}
+
+.privacy,
+.post,
+.category-posts-transition-container {
+  h1,
+  h2,
+  h3,
+  h4,
+  h5,
+  h6,
+  h7 {
+    color: var(--fg-clr-o);
+  }
+}
+
+.privacy,
+.post {
+  @media screen and (min-width: 640px) {
+    box-shadow: var(--shadow-elevation-high);
+    background: var(--rim-light-bg), var(--content-bg-clr);
+    background-size: auto 333px;
+    background-repeat: no-repeat;
+  }
+  &::before {
+    @media screen and (min-width: 640px) {
+      background: var(--rim-light-mask-bg);
+    }
+  }
+}
+.privacy,
+.post-article {
+  a:not(.heading-anchor-link) {
+    border-bottom: 1px solid var(--link-clr);
+    color: var(--link-clr);
+    &:hover,
+    &:focus,
+    &:focus-visible {
+      border-bottom: 1px solid var(--highlight-clr);
+      color: var(--link-clr--hover);
+    }
   }
 }
