fix(front): adjusts some colors

--- a/front/src/lib/styles/base/colors-dark.css
+++ b/front/src/lib/styles/base/colors-dark.css
@@ -1,6 +1,7 @@
 :root {
   --moon: #d4cdc5ff;
   --moonshine: #d4cdc51f;
+  --moonlight: #d4cdc58a;
   --moonshine-shadow-clr: 235deg 24% 5%;
   --light: #fce2b2ff;
   --light-5: #fce2b20c;
